# homelab-infra

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  .yamllint  README.md  Taskfile.yml  pyproject.toml
ansible/: ansible.cfg  requirements.yml
ansible/inventory/home/: hosts.ini
ansible/inventory/home/group_vars/: all.yml  containers.yml  k8s-master.yml  k8s.yml  nodes.yml  operations.yml  sandbox.yml  storage.yml  vms.yml  vpn.yml
ansible/inventory/home/host_vars/: vm-ops-node.yml  vm-vpn.yml
ansible/playbooks/: base.yml  operations.yml  sandbox.yml  site.yml  storage.yml  vpn.yml
ansible/roles/amnezia_proxy/defaults/: main.yml
ansible/roles/amnezia_proxy/handlers/: main.yml
ansible/roles/amnezia_proxy/tasks/: main.yml
ansible/roles/amnezia_proxy/templates/: docker-compose.yml.j2
ansible/roles/ansible/tasks/: main.yml
ansible/roles/base_container/defaults/: main.yml
ansible/roles/base_container/handlers/: main.yml
ansible/roles/base_container/tasks/: cleanup.yml  main.yml  ssh.yml  updates.yml
ansible/roles/base_server/defaults/: main.yml
ansible/roles/base_server/handlers/: main.yml
ansible/roles/base_server/tasks/: cleanup.yml  main.yml  motd.yml  ssh.yml  ufw.yml  updates.yml
ansible/roles/base_server/templates/: motd.sh.j2  sshd_config.j2
ansible/roles/common_baseline/defaults/: main.yml
docs/: INFRASTRUCTURE.md  pci-passthrough.md  proxmox-api.md
scripts/: refresh_known_hosts.sh
sensitive/amnezia/: awg.conf.example
terraform/envs/prod/: main.tf
terraform/modules/image/: main.tf
terraform/modules/vm/: main.tf
(+115 files in other folders)
