[project]
name = "homelab"
version = "0.1.0"
description = "Infrastructure-as-code for my homelab platform."
authors = [{ name = "NKTKLN", email = "nktkln@nktkln.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=13.4.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "commitizen>=4.13.7",
  "ansible-lint>=26.2.0",
  "yamllint>=1.38.0",
]

[tool.ansible-lint]
profile = "basic"
verbosity = 1

exclude_paths = [
  ".venv",
  ".git",
  ".molecule",
  ".cache",
  "terraform",
  ".pre-commit-config.yaml",
  ".yamllint",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
